# neovar

./: .gitignore  Clustering_Plan.md  README.md  training_helpers.py
clustering/: clean_outfiles.sh  cluster.sbatch  cluster.sh  display.py  display_partition_clusters.py  dummyinstance.py  findpolar.py  func.py  func_final.py  func_polar.py  func_special.py  healpix_progress_map.py  init.py  init_clustering.py  instance.py  instance_special.py  merge.py  neowise-parquet-iter-pixels.py  onepart.py  plavchan.py  print_test.py  progressbar.py  run.sh  temp.py
clustering/logs/: errors.txt  masterlog.txt  progress.txt  readme.md  start_time.txt
clustering/stats/: display_partition_clusters.py  dmgcntrl.py  maghistogram.py  maghistogram.sbatch  makemaghistogram.py  plot_mosaic.py  plotmaghistogram.py  readparquet.py
clustering/testing/: clusteringoptim.ipynb  io.py  queryregion.py
docs/clustering/: clustering.md
final/: gaia.py  pretty.py  simbad.py  write_catalog.py
inference/: count.py  dataviewer.py  debug.py  display.py  imgs.py  lib.py  load_data.py  model.py  periodic_analysis.py  run.py  run_cached.py  run_criterion.py  run_partition.py  run_partition_cached.py  transient_analysis.py  view.py
secondary/period/periodfind/: .clang-format  CMakeLists.txt  LICENSE  README.md  setup.py
secondary/period/periodfind/periodfind/: __init__.py  aov.cpp  aov.pyx  ce.cpp  ce.pyx  ls.cpp  ls.pyx
secondary/period/periodfind/periodfind/cuda/: aov.cu  aov.h  ce.cu  ce.h  errchk.cuh  ls.cu  ls.h
training/: model.py  train.ipynb  training_helpers.py
(+80 files in other folders)
